@@ -18,7 +18,6 @@ package org.apache.sis.coverage.grid;
 
 import java.util.Map;
 import java.util.HashMap;
-import java.util.Collections;
 import java.util.Locale;
 import org.opengis.util.FactoryException;
 import org.opengis.util.InternationalString;
@@ -210,7 +209,7 @@ final class GridExtentCRS {
      * Creates a properties map to give to CS, CRS or datum constructors.
      */
     private static Map<String,?> properties(final Object name) {
-        return Collections.singletonMap(IdentifiedObject.NAME_KEY, name);
+        return Map.of(IdentifiedObject.NAME_KEY, name);
     }
 
     /**
