@@ -16,11 +16,11 @@
  */
 package org.apache.sis.internal.metadata;
 
+import java.util.Map;
 import java.util.Set;
 import java.util.List;
 import java.util.Locale;
 import java.util.Iterator;
-import java.util.Collections;
 import java.nio.charset.StandardCharsets;
 import org.opengis.metadata.citation.Citation;
 import org.opengis.metadata.content.ContentInformation;
@@ -68,7 +68,7 @@ public final strictfp class MergerTest extends TestCase {
         image.setCloudCoverPercentage(0.8);
         metadata.getContentInfo().add(image);
 
-        metadata.setLocalesAndCharsets(Collections.singletonMap(Locale.JAPANESE, StandardCharsets.UTF_16));
+        metadata.setLocalesAndCharsets(Map.of(Locale.JAPANESE, StandardCharsets.UTF_16));
         return metadata;
     }
 
@@ -87,7 +87,7 @@ public final strictfp class MergerTest extends TestCase {
         features.setIncludedWithDataset(Boolean.TRUE);
         metadata.getContentInfo().add(features);
 
-        metadata.setLocalesAndCharsets(Collections.singletonMap(Locale.FRENCH, StandardCharsets.UTF_8));
+        metadata.setLocalesAndCharsets(Map.of(Locale.FRENCH, StandardCharsets.UTF_8));
         return metadata;
     }
 
