@@ -16,7 +16,7 @@
  */
 package org.apache.sis.util.iso;
 
-import java.util.Collections;
+import java.util.Map;
 import javax.xml.bind.Marshaller;
 import javax.xml.bind.Unmarshaller;
 import javax.xml.bind.JAXBContext;
@@ -66,7 +66,7 @@ public final strictfp class NameMarshallingTest extends TestCase {
     private String marshal(final GenericName name) throws JAXBException {
         if (pool == null) {
             pool = new MarshallerPool(JAXBContext.newInstance(IdentifiedObjectMock.class),
-                    Collections.singletonMap(XML.LENIENT_UNMARSHAL, Boolean.TRUE));
+                                      Map.of(XML.LENIENT_UNMARSHAL, Boolean.TRUE));
         }
         final Marshaller marshaller = pool.acquireMarshaller();
         marshaller.setProperty(XML.METADATA_VERSION, VERSION_2007);
