@@ -19,7 +19,7 @@ package org.apache.sis.referencing.crs;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Date;
-import java.util.Collections;
+import java.util.Map;
 import org.apache.sis.referencing.datum.DefaultTemporalDatum;
 import org.apache.sis.referencing.cs.HardCodedCS;
 import org.apache.sis.io.wkt.Convention;
@@ -105,10 +105,10 @@ public final strictfp class DefaultTemporalCRSTest extends TestCase {
     @Test
     public void testDateConversionWithNanos() {
         final DefaultTemporalDatum datum = new DefaultTemporalDatum(
-                Collections.singletonMap(DefaultTemporalDatum.NAME_KEY, "For test"),
+                Map.of(DefaultTemporalDatum.NAME_KEY, "For test"),
                 new Date(10000L * MILLISECONDS_PER_DAY + 12345));                        // 1997-05-19T00:00:12.345Z
         final DefaultTemporalCRS crs = new DefaultTemporalCRS(
-                Collections.singletonMap(DefaultTemporalCRS.NAME_KEY, datum.getName()),
+                Map.of(DefaultTemporalCRS.NAME_KEY, datum.getName()),
                 datum, HardCodedCS.DAYS);
         /*
          * DefaultTemporalCRS.toSeconds converter should have a non-zero offset because of the 0.345 seconds offset
