@@ -19,7 +19,6 @@ package org.apache.sis.referencing.operation;
 import java.util.Set;
 import java.util.Map;
 import java.util.HashMap;
-import java.util.Collections;
 import java.text.ParseException;
 import org.opengis.util.FactoryException;
 import org.opengis.parameter.ParameterValueGroup;
@@ -901,7 +900,7 @@ public final strictfp class CoordinateOperationFinderTest extends MathTransformT
      * This is a convenience method for construction of geodetic objects.
      */
     private static Map<String,String> properties(final String name) {
-        return Collections.singletonMap(CoordinateReferenceSystem.NAME_KEY, name);
+        return Map.of(CoordinateReferenceSystem.NAME_KEY, name);
     }
 
     /**
