@@ -17,7 +17,6 @@
 package org.apache.sis.referencing.operation;
 
 import java.util.Map;
-import java.util.Collections;
 import org.opengis.parameter.ParameterValueGroup;
 import org.opengis.referencing.crs.GeographicCRS;
 import org.opengis.referencing.crs.ProjectedCRS;
@@ -101,7 +100,7 @@ public final strictfp class HardCodedConversions {
      * Creates a defining conversion of the given name with given parameter values.
      */
     private static DefaultConversion create(final String name, final OperationMethod method, final ParameterValueGroup pg) {
-        return new DefaultConversion(Collections.singletonMap(OperationMethod.NAME_KEY, name), method, null, pg);
+        return new DefaultConversion(Map.of(OperationMethod.NAME_KEY, name), method, null, pg);
     }
 
     /**
@@ -120,7 +119,7 @@ public final strictfp class HardCodedConversions {
      * @return two-dimensional projection using the given method.
      */
     public static DefaultProjectedCRS createCRS(final DefaultConversion conversion) {
-        return new DefaultProjectedCRS(Collections.singletonMap(ProjectedCRS.NAME_KEY, conversion.getName()),
+        return new DefaultProjectedCRS(Map.of(ProjectedCRS.NAME_KEY, conversion.getName()),
                 HardCodedCRS.WGS84, conversion, HardCodedCS.PROJECTED);
     }
 
@@ -190,6 +189,6 @@ public final strictfp class HardCodedConversions {
      * Puts the given name in a property map CRS constructors.
      */
     private static Map<String,?> name(final String name) {
-        return Collections.singletonMap(ProjectedCRS.NAME_KEY, name);
+        return Map.of(ProjectedCRS.NAME_KEY, name);
     }
 }
